Update project to use JDK 21, add highest paid employee reporting, and refactor AsyncDataService. Updated Maven configuration and added new method in EmployeeSearchService for department salary analysis.